# SpaceBattle

./: CMakeLists.txt  SpaceBattle.pro  battleship.cpp  battleship.h  coordinate.cpp  coordinate.h  game.cpp  game.h  grid.cpp  grid.h  main.cpp  maingame.cpp  maingame.h  maingame.ui  player.cpp  player.h
ClientSB/: CMakeLists.txt  ClientSB.pro  ClientSB.pro.user.5e9907f  coordinate.cpp  coordinate.h  creategamescene.cpp  creategamescene.cpp.autosave  creategamescene.h  creategamescene.h.autosave  creategamescene.ui  dialog.cpp  dialog.cpp.autosave  dialog.h  dialog.ui  game.cpp  game.cpp.autosave  game.h  main.cpp  maingame.cpp  maingame.cpp.autosave  maingame.h  maingame.h.autosave  maingame.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  player.cpp  player.h
ServerSB/: ServerSB.pro  ServerSB.pro.user.5e9907f  main.cpp  server.cpp  server.h
SpaceBattle-master/: SpaceBattle.pro  SpaceBattle.pro.user.b22f80d  battleship.cpp  grid.h  main.cpp  maingame.h  mainwindow.ui
build-ClientSB-Desktop_Qt_5_11_2_MinGW_32bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  object_script.ClientSB.Debug  object_script.ClientSB.Release  ui_creategamescene.h  ui_dialog.h  ui_maingame.h  ui_mainwindow.h
build-ClientSB-Desktop_Qt_5_11_2_MinGW_32bit-Debug/debug/: moc_creategamescene.cpp  moc_dialog.cpp  (+2 more)
build-ServerSB-Desktop_Qt_5_11_2_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
controller/: main.cpp
model/: Battleship.cpp  Battleship.h  Grid.cpp  Grid.h  Player.cpp  Player.h
modele/: Coordinate.cpp  Coordinate.h
(+1 files in other folders)
